0.0600 August 11, 2010
 - Fixed a runtime error created in 0.0500.
 - Added likes publishing.
 - Added comment publishing.
 - Added note publishing.
 - Added link publishing.

0.0500 August 10, 2010
 - Added feed/wall publishing.

0.0402 July 15, 2010
 - Fixed a pod error.

0.0401 July 14, 2010
 - Added a cookbook and the first recipe.
 - Made the third element of the exception, the original exception type from Facebook.
 - Fixed a bug with the Any::Moose transition.

0.0400 July 13, 2010
 - Added Facebook::Graph::Picture for accessing the pictures of any object.
 - Fixed POD docs thanks to Tim Heaney for the patch.
 - Migrated to Any::Moose for those people that want to use Mouse instead of Moose. Thanks to tehmoth for the patch.
 - Added a note about using IO::Socket::SSL instead of Crypt::SSLeay. Thanks to Søren Lund for the idea.

0.0300 July 11, 2010
 - Added convert_sessions method to make it easier for existing apps to use Facebook::Graph. Thanks to Rainer Größlinger for the idea.
 - Converted Facebook::Graph::Query::Response into Facebook::Graph::Response, so it could be generically used and/or subclassed by other modules.

0.0201 July 10, 2010
 - Better error messages on failed queries.
 - Fixed the AccessToken parsing problem.
 - Fixed another POD formatting problem.
 - More cleanup.
 - Modified the fetch() method to use the Query module behind the scenes.

0.0200 July 9, 2010
 - Added the Facebook::Graph::Query API, which allows for powerful searching of Facebook data.
 - Fixed a bunch of AccessToken and Authorize bugs.
 - Fixed a bunch of POD formatting problems.
 - Replaced URL with URI everywhere for consistency.

0.0100 July 8, 2010
 - Initial public release.