@@ -20,6 +20,8 @@ Test::More = 0
 URI = 1.54
 LWP = 5.836
 Crypt::SSLeay = 0.57
+DateTime = 0.61
+DateTime::Format::Strptime = 1.4000
 
 [MetaNoIndex]
 folder = author.t
